# econext-gateway

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/: 99-econet.rules  99-econext.rules  99-modbus-sniffer.rules  bootstrap.sh  econet-gm3-gateway.service  econext-gateway.service  install-sniffer.sh  install.sh  modbus-sniffer.service
docs/: API_SPEC.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  HEATPUMP_MODBUS.md  PARAMETERS.md  PROTOCOL.md
src/econet_gm3_gateway/: __init__.py  main.py
src/econet_gm3_gateway/api/: __init__.py  dependencies.py  routes.py
src/econet_gm3_gateway/core/: __init__.py  cache.py  config.py  models.py
src/econet_gm3_gateway/protocol/: __init__.py  codec.py  constants.py  crc.py  frames.py  handler.py
src/econet_gm3_gateway/serial/: __init__.py  connection.py  reader.py  writer.py
src/econext_gateway/: __init__.py  main.py
src/econext_gateway/api/: __init__.py  cycling_routes.py  dependencies.py  routes.py
src/econext_gateway/control/: anticycling.py  cycling.py
src/econext_gateway/core/: __init__.py  cache.py  config.py  models.py  virtual_thermostat.py
src/econext_gateway/protocol/: __init__.py  codec.py  constants.py  dispatcher.py  frames.py  handler.py
src/econext_gateway/serial/: __init__.py  connection.py  protocol.py  reader.py  writer.py
src/econext_gateway/thermostat/: __init__.py  emulator.py  params.py
tests/: conftest.py  test_anticycling.py  test_api.py  test_cache.py  test_captured_data.py  test_codec.py  test_config.py  test_crc.py  test_cycling.py  test_cycling_api.py  test_frames.py  test_handler.py  test_integration.py  test_models.py  test_serial.py  test_thermostat.py
tests/.artifacts/: record_serial.py
tools/: EmonHubEconextInterfacer.py  decode_capture.py  modbus_detect.py  modbus_sniffer.py
