[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "econet-gm3-gateway"
version = "0.1.0"
description = "Local REST API gateway for GM3 protocol heat pump controllers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Linus" }
]
keywords = ["econet", "gm3", "heat-pump", "home-assistant", "api"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyserial>=3.5",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.scripts]
econet-gateway = "econet_gm3_gateway.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff==0.14.13",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/econet_gm3_gateway/api/routes.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["econet_gm3_gateway"]
